Fix isotope alignment issues

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -88,20 +88,20 @@ nav {
   visibility: hidden;
 }
 
-.isotope-item {
-  width: 23%;
-
-  @media screen and (max-width: 1300px) {
-    width:30%;
-  }
-  @media screen and (max-width: 1200px) {
-    width:47%;
-  }
-  @media screen and (max-width: 760px) {
-    width:98.5%;
-  }
-
-}
+// .isotope-item {
+//   width: 23%;
+//
+//   @media screen and (max-width: 1300px) {
+//     width:30%;
+//   }
+//   @media screen and (max-width: 1200px) {
+//     width:47%;
+//   }
+//   @media screen and (max-width: 760px) {
+//     width:98.5%;
+//   }
+//
+// }
 
 .fourths {
   width: 23%;
